--- a/connectly_project/posts/templates/base.html
+++ b/connectly_project/posts/templates/base.html
@@ -20,8 +20,12 @@
         <p>Welcome, {{ user.username }}!</p>
             <a href="{% url 'logout' %}">Logout</a>
         {% else %}
-            <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'logout' %}">Log    out</a>
         {% endif %}
+
+        <a href="?liked=true">Liked Posts</a>
+        <a href="?liked=false">All Posts</a>
+
     </nav>
     
     <main>
