--- a/connectly_project/posts/templates/base.html
+++ b/connectly_project/posts/templates/base.html
@@ -23,8 +23,12 @@
             <a href="{% url 'logout' %}">Log    out</a>
         {% endif %}
 
-        <a href="?liked=true">Liked Posts</a>
-        <a href="?liked=false">All Posts</a>
+        <a href="{% url 'liked_posts' %}">Liked Posts</a>
+        <a href="{% url 'post-list' %}">All Posts</a>
+
+        {% if user.is_authenticated %}
+            <a href="{% url 'user_profile' user.id %}">My Profile</a>
+        {% endif %}
 
     </nav>
     
